--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -97,6 +97,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\About\about.png" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="Demo_StoreKey.pfx" />
     <None Include="Package.StoreAssociation.xml" />
     <Content Include="Assets\About\StartMainPage.jpg" />
