--- a/Demo_Test/Demo_Test.csproj
+++ b/Demo_Test/Demo_Test.csproj
@@ -120,6 +120,8 @@
     </Compile>
     <Compile Include="GaoStatusBar.cs" />
     <Compile Include="GetOne.cs" />
+    <Compile Include="http\HttpHelper.cs" />
+    <Compile Include="http\ServiceUri.cs" />
     <Compile Include="INotifyPropertyChanged_OnPropertyChanged.cs" />
     <Compile Include="Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
@@ -134,6 +136,9 @@
       <DependentUpon>OneThing.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serial.xaml.cs">
+      <DependentUpon>Serial.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
@@ -191,6 +196,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="OneThing.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Serial.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
