--- a/Demo_Test/Demo_Test.csproj
+++ b/Demo_Test/Demo_Test.csproj
@@ -107,6 +107,7 @@
     <Content Include="Assets\Res\music.png" />
     <Content Include="Assets\Res\music_active.png" />
     <Content Include="Assets\Res\no_search_result.png" />
+    <Content Include="Assets\Res\qa_image.png" />
     <Content Include="Assets\Res\reading.png" />
     <Content Include="Assets\Res\reading_active.png" />
     <Content Include="Assets\Res\search.png" />
@@ -117,6 +118,8 @@
     <Content Include="Assets\Res\search_tv.png" />
     <Content Include="Assets\BadgeLogo.scale-150.png" />
     <Content Include="Assets\BadgeLogo.scale-200.png" />
+    <Content Include="Assets\Res\serial_image.png" />
+    <Content Include="Assets\Res\s_artcile.png" />
     <Content Include="Assets\Square150x150Logo.scale-100.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
     <None Include="Demo_StoreKey.pfx" />
@@ -138,6 +141,7 @@
       <DependentUpon>BlankPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Common\CommandBase.cs" />
+    <Compile Include="Converter\ImageSourceConvertor.cs" />
     <Compile Include="GaoStatusBar.cs" />
     <Compile Include="GetOne.cs" />
     <Compile Include="http\HttpHelper.cs" />
@@ -146,6 +150,10 @@
     <Compile Include="Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\PeopleModel.cs" />
+    <Compile Include="Models\MovieModel.cs" />
+    <Compile Include="Models\MusicModel.cs" />
+    <Compile Include="Models\ReadingModel.cs" />
     <Compile Include="Movie.xaml.cs">
       <DependentUpon>Movie.xaml</DependentUpon>
     </Compile>
@@ -282,9 +290,7 @@
       <Name>Demo.BackGround</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SearchPage\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
