--- a/OtherTest/OtherTest.csproj
+++ b/OtherTest/OtherTest.csproj
@@ -105,6 +105,7 @@
     <Compile Include="ExtendedSplash.xaml.cs">
       <DependentUpon>ExtendedSplash.xaml</DependentUpon>
     </Compile>
+    <Compile Include="HttpHelper.cs" />
     <Compile Include="HttpTest.xaml.cs">
       <DependentUpon>HttpTest.xaml</DependentUpon>
     </Compile>
@@ -114,7 +115,19 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MyControlsTest.xaml.cs">
+      <DependentUpon>MyControlsTest.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MyControls\TransGrid.xaml.cs">
+      <DependentUpon>TransGrid.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestLogIn.xaml.cs">
+      <DependentUpon>RequestLogIn.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SharePage.xaml.cs">
+      <DependentUpon>SharePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TaskConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +174,22 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MyControlsTest.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MyControls\TransGrid.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="RequestLogIn.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SharePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
